--- a/css/main.css
+++ b/css/main.css
@@ -156,6 +156,34 @@ img {
     max-width:415px;
     height:450px;
 }
+select {
+    width: 15%;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    background-color: #ffffff;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+.button {
+    background-color: #ffffff;
+    border: none;
+    border-radius: 4px;
+    color: rgb(0, 0, 0);
+    padding: 10px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    font-family: Camphor,Open Sans,Segoe UI,sans-serif;
+    margin: 4px 2px;
+    cursor: pointer;
+    transition-duration: 0.4s;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+  
+  .button1:hover {
+    box-shadow: 0 6px 8px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19); 
+}
 .button_links {
     font-family: Camphor,Open Sans,Segoe UI,sans-serif;
     background-color:#7E78D2;
@@ -166,10 +194,10 @@ img {
     text-decoration: none;
     text-transform: uppercase;
     margin-left:25em;
-  }
+}
   
 .button_links:hover {
     background-color:#6F58C9;
     transition-duration:0.5s;
     cursor: pointer;
-  }
+}
