--- a/css/main.css
+++ b/css/main.css
@@ -124,12 +124,65 @@ ul {
     background-size:cover;
     margin-bottom:-10%;
 }
-p {
-    margin-top: auto;
-    margin-left:40%;
+.slideContainer {
+    text-align: center;
+    margin-top: 2em;
+    margin-left: 45.8%;
+    max-width: 50%;
+    margin-top:2em;
+    position:relative;
+}
+.slides {
+    font-family: Camphor,Open Sans,Segoe UI,sans-serif;
+    padding: 1em;
+    display:contents;
+    margin-left:40.8%;
+    /*display:none;*/
+    text-align:center;
+    background-color: #ffffff;
+    color:#6F58C9;
+}
+.slideContainer:hover{
+    background-color: rgb(180, 180, 200);
+    color: rgb(57, 0, 192);
+    transition-duration:0.5s;
+}
+.projectCounter {
+    font-family: Camphor,Open Sans,Segoe UI,sans-serif;
+    color:#6F58C9;
+}
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -30px;
+    padding: 16px;
+    color: #888;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+.prev {
+    position:absolute;
+    left:0;
+}
+.next {
+    position: absolute;
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+a {
     color:#6F58C9;
     font-family: Camphor,Open Sans,Segoe UI,sans-serif;
-    text-align:center;
+}
+p {
+    margin-top: auto;
+    margin-left:40.8%;
+    color:#6F58C9;
+    font-family: Camphor,Open Sans,Segoe UI,sans-serif;
+    text-align:left;
     position:relative;
 }
 h1 {
@@ -170,7 +223,7 @@ select {
     border-radius: 4px;
     background-color: #ffffff;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-}
+  }
 .button {
     background-color: #ffffff;
     border: none;
@@ -186,7 +239,7 @@ select {
     cursor: pointer;
     transition-duration: 0.4s;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-}
+  }
   
   .button1:hover {
     box-shadow: 0 6px 8px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19); 
@@ -201,10 +254,10 @@ select {
     text-decoration: none;
     text-transform: uppercase;
     margin-left:25em;
-}
+  }
   
 .button_links:hover {
     background-color:#6F58C9;
     transition-duration:0.5s;
     cursor: pointer;
-}
+  }
